rook-cephfs/jyjt-app-dev/ingress-nginx/meet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meet-ingress
  namespace: app-dev
spec:
  ingressClassName: nginx
  rules:
  - host: "dev-meet.juneyaokc.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: meet-nodeport
            port:
              number: 8085
