rook-cephfs/jyjt-app-dev/ingress-nginx/redbag-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redbag-ingress
  namespace: app-dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
  - host: "dev-redbag.juneyaokc.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: redbag-clusterip
            port:
              number: 8084
