rook-cephfs/jyjt-app-dev/ingress-nginx/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: app-dev
spec:
  ingressClassName: nginx
  rules:
  - host: "dev-web.juneyaokc.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: web-clusterip
            port:
              number: 8082
